k8s/workloads/services/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cloud.ray.life
    - captivecloud.ray.life
    - gatewaycloud.ray.life
    - hubcloud.ray.life
    secretName: rayprod-cert
  rules:
    - host: cloud.ray.life
      http:
        paths:
          - backend:
              service:
                name: ray-controller-dashboard
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: captivecloud.ray.life
      http:
        paths:
          - backend:
              service:
                name: ripple-nginx
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: gatewaycloud.ray.life
      http:
        paths:
          - backend:
              service:
                name: ray-gateway-service
                port:
                  number: 38080
            pathType: ImplementationSpecific
    - host: jsreport.ray.life
      http:
        paths:
          - backend:
              service:
                name: ray-jsreports-service
                port:
                  number: 5488
            pathType: ImplementationSpecific
    - host: hubcloud.ray.life
      http:
        paths:
          - path: /ray-hub-service
            backend:
              service:
                name: ray-hub-service
                port:
                  number: 38099
            pathType: ImplementationSpecific
          - path: /api/v1/device
            backend:
              service:
                name: ray-hub-service
                port:
                  number: 38099
            pathType: ImplementationSpecific
          - backend:
              service:
                name: ray-hub-dashboard
                port:
                  number: 80
            pathType: ImplementationSpecific
